# twelve-data-scrape

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  scrapy.cfg  scrapyd.conf  setup.py  test.py
twelve_data/: items.py  middlewares.py  pipelines.py  settings-prd.py  settings.py
twelve_data/spiders/: forex_pair.py  time_series.py  time_series_aud_cad.py  time_series_aud_jpy.py  time_series_btc_usd.py  time_series_eth_usd.py  time_series_eur_usd.py  time_series_gbp_aud.py  time_series_gbp_cad.py  time_series_gbp_usd.py  time_series_manual.py  time_series_usd_jpy.py  time_series_xag_usd.py  time_series_xau_usd.py
utils/: twelve_data.py
